--- a/css/stayles.css
+++ b/css/stayles.css
@@ -2,7 +2,15 @@
     --main_font_color:#2E2F42;
     --secondary_font_color:#434455;
     --logo_color:#4D5AE5;
-    
+    --margin_button:120px;
+    --padding_button:120px;
+}
+h1, h2, h3, h4, h5, h6, p{
+    margin: 0;
+}
+ul{
+    margin: 0;
+    padding: 0;
 }
 a {
     text-decoration: none;
@@ -11,10 +19,32 @@ a {
 li {
     list-style: none;
 }
+img{
+    display: block; 
+    max-width: 100%; 
+    height: auto;
+}
 body{
     font-family: 'Roboto', sans-serif;
     color:var(--main_font_color);
     background: #FFFFFF;
+}
+.container{
+    margin: 0 auto;
+    width: 1158px;
+    padding-left: 12px;
+    padding-right: 12px;
+
+    border: red solid;
+}
+.header{
+    border-bottom: 1px solid #E7E9FC;
+}
+.header_list{
+    display: flex;
+}
+.header-container{
+    display: flex;
 }
 .header_logo{
     font-family: 'Raleway', sans-serif;
@@ -24,23 +54,39 @@ body{
     letter-spacing: 0.03em;
     color: var(--main_font_color);
     text-transform: uppercase;
+    margin-right: 56px;
 }
 .header_Logo_span{
     color: var(--logo_color);
 }
 .header_link{
+    display: inline-block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     color: var(--main_font_color);
     letter-spacing: 0.02em;
+    padding: 20px 24px;
+}
+.header_address{
+    display: inline-block;
+    margin-left: auto;
+}
+.header_navigation{
+    display: flex;
+    align-items: center;
+}
+.header_address_list{
+    display: flex;  
 }
 .header_address_tel_link, .header_address_mail_link{
+    display: inline-block;
     font-size: 16px;
-    line-height: 1.5px;
+    line-height: 1.5;
     color:var(--secondary_font_color);
     font-style: normal;
     letter-spacing: 0.02em;
+    padding: 20px 24px;
 }
 .header_address_tel_link:hover, .header_address_mail_link:hover,.header_address_tel_link:focus,
 .header_address_mail_link:focus{
@@ -51,15 +97,22 @@ body{
 .header_link.current{
     color:var(--logo_color);
 }
+
 .caption{
     background:#2E2F42;
+    padding: 188px 0;
+    margin-bottom: var(--margin_button);
+    text-align: center;
 }
 .caption_slogan{
-    text-align: center;
     font-size: 56px;
     line-height: 1.07;
     color: #FFFFFF;
     letter-spacing: 0.02em;
+    max-width: 496px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .caption_btn{
     font-family: inherit;
@@ -69,21 +122,43 @@ body{
     line-height: 1.5;
     color: #FFFFFF;
     cursor: pointer;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: 1px solid transparent;
 }
 .caption_btn:hover, .caption_btn:focus{
     background: #404BBF;
+}
+.content_title{
+    margin-bottom: 72px;
+}
+.hero{
+    padding-bottom: var(--padding_button);
+}
+.hero_list{
+    display: flex;
+    justify-content: space-between;
 }
 .hero_list_item_title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .hero_list_item_text{
     font-size: 16px;
     line-height: 1.5;
     color:var(--secondary_font_color);
     letter-spacing: 0.02em;
+    max-width: 264px;
+}
+.content{
+    padding-bottom: var(--padding_button);
+}
+.content_title_list{
+        display: flex;
+        justify-content: space-between;
 }
 .content_title, .box_title{
     text-transform: capitalize;
@@ -94,24 +169,37 @@ body{
 }
 .box{
     background: #F4F4FD;
+    padding: 120px 0;
+}
+.box_title{
+    margin-bottom: 72px;
+}
+.box_list{
+    display: flex;
+    justify-content: space-between;
 }
 .box_list_item{
     background: #FFFFFF;
+    text-align: center;
 }
 .box_list_item_title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
+    padding-top: 32px;
     }
 .box_list_item_text{
     font-size: 16px;
     line-height: 1.5;
     color:var(--secondary_font_color);
     letter-spacing: 0.02em;
+    padding-bottom: 32px;
 }
 .footer{
     background: #2E2F42;
+    padding: 100px 0;
 }
 .footer_link{
     font-family: 'Raleway';
@@ -130,6 +218,15 @@ body{
     line-height: 1.5;
     color: #E7E9FC;
     letter-spacing: 0.02em;
+    max-width: 264px;
+    margin-top: 16px;
+}
+.btn_list{
+    display: flex;
+    column-gap: 24px;
+    justify-content: center;
+    margin-bottom: 72px;
+    margin-top: 96px;
 }
 .btn_item{
     font-family: inherit;
@@ -140,10 +237,30 @@ body{
     letter-spacing: 0.04em;
     color:var(--logo_color);
     cursor: pointer;
+    padding: 12px 24px;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
 }
 .btn_item:hover, .btn_item:focus{
-background: #404BBF;
-color: #fff;
+    background: #404BBF;
+    color: #fff;
+    border: 1px solid transparent;
+}
+.section_items_title_text{
+    border-bottom: 1px solid #E7E9FC;
+    border-left: 1px solid #E7E9FC;
+    border-right: 1px solid #E7E9FC;
+    padding: 32px 15px;
+}
+.section_list{
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+    padding-bottom: var(--padding_button);
+}
+.section_items {
+    width: calc((100% - 48px)/3);
 }
 .section_items_title{
     font-weight: 500;
@@ -151,6 +268,7 @@ color: #fff;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color:var(--main_font_color);
+    margin-bottom: 8px;
 }
 .section_items_text{
     font-size: 16px;
